fix: modal width causing horizontal scroll on mobile

--- a/assets/scss/components/_modal.scss
+++ b/assets/scss/components/_modal.scss
@@ -43,7 +43,12 @@
 
 .Modal-cancel {
   position: absolute;
-  width: 100%;
+  width: 90%;
+
+  @include breakpoint(md) {
+    width: 100%;
+  }
+
   height: 100%;
   cursor: default;
 }
